===========
 Changelog
===========

1.3.1 (unreleased)
==================

- Nothing changed yet.


1.3.0 (2010-03-20)
==================

- Adapted code and tests to run with `icemac.addressbook` newer than
  version 1.2.0.


1.2.0 (2010-02-06)
==================

- Fixed tests to run together with `icemac.addressbook` version 1.1
  and above.


1.1.0 (2009-12-29)
==================

- Prepared texts for translation.


1.0.1 (2009-12-20)
==================

- Importing persons, deleting them and importing them again, led to an
  exception.


1.0 (2009-11-21)
================

- Supporting the user defined fields feature of address book.

- Added migration code to add importer to exising address books.


Previous Versions
=================

See ``OLD_CHANGES.txt`` inside the package.