@@ -70,19 +70,6 @@ class FileSessionStorageStep(Step):
         return get_file_session(self.context, self.request)
 
 
-def get_import_entities():
-    "Get the entities relevant for the import."
-    name_suffixes = ['person.Person',
-                     'address.PostalAddress',
-                     'address.PhoneNumber',
-                     'address.EMailAddress',
-                     'address.HomePageAddress']
-    return [zope.component.getUtility(
-                icemac.addressbook.interfaces.IEntity,
-                name='icemac.addressbook.'+suffix)
-            for suffix in name_suffixes]
-
-
 @zope.interface.implementer(icemac.addressbook.interfaces.IAddressBook)
 @zope.component.adapter(icemac.ab.importer.interfaces.IImportFile)
 def importfile_to_addressbook(import_file):
