@@ -5,7 +5,8 @@
 1.3.1 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Adapted code to run with `icemac.addressbook` version 1.4.0 or
+  newer.
 
 
 1.3.0 (2010-03-20)
